--- a/res/values/xperience_strings.xml
+++ b/res/values/xperience_strings.xml
@@ -22,6 +22,10 @@
     <!-- About phone screen, status item label  [CHAR LIMIT=40] -->
     <string name="build_channel">Channel</string>
 
+    <!-- Quick unlock -->
+    <string name="unlock_quick_unlock_control_title">Quick unlock</string>
+    <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
+
     <!--Reset feature -->
     <string name="reset_all_settings">RESET ALL</string>
     <string name="reset_selected_settings">RESET SELECTED</string>
