RainbowUnicorn: add Rainbow Settings
Change-Id: Ie510fa0414f58e5b09f8e9de44cbe6286642d03a
Signed-off-by: klozz <klozz@vivaldi.net>

--- a/res/values/xperience_strings.xml
+++ b/res/values/xperience_strings.xml
@@ -33,5 +33,9 @@
     <string name="reset_settings_summary">Reset XPerience feature preferences</string>
     <string name="keywords_settings_reset">reset</string>
 
+    <!--XPerience custom settings -->
+    <string name="xperience_settings_title">XPerience™ Settings</string>
+    <string name="xperience_settings_summary">Customize ROM features</string> 
+
 </resources>
 
