--- a/res/values/xperience_config.xml
+++ b/res/values/xperience_config.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--  Copyright (C) 2007 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2019 The XPerience Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -12,11 +12,10 @@
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
- -->
+-->
+<resources>
 
-<resources xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="config_backup_settings_label" msgid="4423938073600296337"></string>
-    <string name="config_grayscale_settings_intent" msgid="3834320486271088951"></string>
+    <!-- Device specific doze package -->
+    <string name="config_customDozePackage" translatable="false"></string>
 
 </resources>
