--- a/res/values/xperience_strings.xml
+++ b/res/values/xperience_strings.xml
@@ -37,5 +37,11 @@
     <string name="xperience_settings_title">XPerience™ Settings</string>
     <string name="xperience_settings_summary">Customize ROM features</string> 
 
+    <!-- Hardware info -->
+    <!-- Label for device's hardware platform value [CHAR LIMIT=40] -->
+    <string name="platform_revision">Platform</string>
+    <!-- Label for device's hardware ram size [CHAR LIMIT=40] -->
+    <string name="total_ram">Total RAM</string>
+
 </resources>
 
