--- a/res/drawable/ic_homepage_xperience.xml
+++ b/res/drawable/ic_homepage_xperience.xml
@@ -17,13 +17,11 @@
 -->
  <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
      <item>
-        <shape android:shape="oval">
-            <solid
-                android:color="@color/homepage_xperience_background" />
-            <size
-                android:width="@dimen/dashboard_tile_image_size"
-                android:height="@dimen/dashboard_tile_image_size" />
-        </shape>
+	 <com.android.settingslib.widget.AdaptiveIconShapeDrawable
+          android:width="@dimen/dashboard_tile_image_size"
+          android:height="@dimen/dashboard_tile_image_size"
+          android:color="@color/homepage_xperience_background" />
+
     </item>
 
      <item
