--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -126,6 +126,14 @@
         settings:controller="com.android.settings.accessibility.TopLevelAccessibilityPreferenceController"/>
 
     <Preference
+        android:key="top_level_xperience_settings"
+        android:title="@string/xperience_settings_title"
+        android:summary="@string/xperience_settings_summaryy"
+        android:icon="@drawable/ic_homepage_xperience"
+        android:order="9"
+        android:fragment="mx.xperience.rainbowunicorn.RainbowUnicorn"/>
+
+    <Preference
         android:key="top_level_system"
         android:title="@string/header_category_system"
         android:summary="@string/system_dashboard_summary"
